--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 html, body {
     width: 100%;
     text-align: center;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     height: 100%;
     line-height: 1.5;
     font-family: 'Noto Sans TC', 'Nunito Sans', sans-serif;
@@ -82,7 +82,7 @@ html, body {
 }
   
 button {
-    color: white;
+    color: black;
     border: 1px solid white;
     border-radius: 3px;
     padding: 8px;
